--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="logo"><img src="assets/img/union.png"></div>
-  <div class="login">Log in</div>
+  <div class="login" routerLink="/login">Log in</div>
 </div>
 
 <div class="category">
