--- a/src/app/category-list/category-list.component.css
+++ b/src/app/category-list/category-list.component.css
@@ -19,3 +19,10 @@
     background: #FF0085;
     color: #fff;
 }
+@media (max-width: 920px) {
+    .category-list {
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto 1fr;
+        grid-gap: 10px 1rem;
+    }
+}
