--- a/src/app/news-item/news-item.component.css
+++ b/src/app/news-item/news-item.component.css
@@ -124,3 +124,16 @@
     padding-right: 5rem;
     color: rgb(102, 102, 102);
 }
+@media (max-width: 920px) {
+    .list {
+        grid-template-rows: auto 1fr;
+        grid-template-columns: 1fr;
+    }
+    .list img {
+        width: 100%;
+    }
+    .list_text__desc {
+        padding: 0;
+        margin-top: 1rem;
+    }
+}
